--- a/August0802/src/main/res/layout/activity_content_detail.xml
+++ b/August0802/src/main/res/layout/activity_content_detail.xml
@@ -43,7 +43,8 @@
                     android:id="@+id/content_header_iv"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:adjustViewBounds="true" />
+                    android:adjustViewBounds="true"
+                    android:scaleType="centerCrop" />
                 <!--android:scaleType="fitXY"填充ImageView布局-->
 
                 <ImageView
