--- a/August0802/src/main/res/layout/activity_container.xml
+++ b/August0802/src/main/res/layout/activity_container.xml
@@ -8,7 +8,7 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-    <!--main_toolbar_right content-->
+    <!--main_toolbar_right dailyArticle-->
     <include
         layout="@layout/container_gloable"
         android:layout_width="match_parent"
