--- a/August0802/src/main/res/layout/global_item_layout.xml
+++ b/August0802/src/main/res/layout/global_item_layout.xml
@@ -17,7 +17,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:adjustViewBounds="true"
-        android:scaleType="fitCenter"
+        android:scaleType="fitXY"
         android:layout_gravity="center_vertical" />
 
     <TextView
