--- a/August0802/src/main/res/layout/activity_about_app.xml
+++ b/August0802/src/main/res/layout/activity_about_app.xml
@@ -36,8 +36,8 @@
         android:text="
         **  作者：一个漂亮的GoER \n
         **  微博：一个漂亮的GoER \n
-        **  Email：\n\t\t\t\t\t\t\t\t\t\twondertwo1@163.com \n
-        **  博客：\n\t\t\t\t\t\t\t\t\t\twww.cnblogs.com/wondertwo \n\n
+        **  Email：\n\t\t\t\t\t\t\t\t\t\twondertwo1@163.com\n
+        **  博客：\n\t\t\t\t\t\t\t\t\t\tcnblogs.com/wondertwo\n\n
         ------------------------\n\n
         **  欢迎邮箱反馈交流 \n
         **  保留本软件相关权限 \n
