--- a/August0802/src/main/res/layout/container_gloable.xml
+++ b/August0802/src/main/res/layout/container_gloable.xml
@@ -23,7 +23,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <!--main_toolbar_right content area-->
+    <!--main_toolbar_right dailyArticle area-->
     <include layout="@layout/container_content" />
 
     <!--floating bar-->
