--- a/August0802/src/main/res/layout/dialog_loading_layout.xml
+++ b/August0802/src/main/res/layout/dialog_loading_layout.xml
@@ -3,21 +3,22 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:paddingTop="?dialogPreferredPadding"
-    android:paddingBottom="?dialogPreferredPadding"
-    android:paddingLeft="?dialogPreferredPadding"
-    android:paddingRight="?dialogPreferredPadding">
+    android:gravity="center_horizontal"
+    android:background="@color/colorDialog">
 
     <ProgressBar
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"/>
+        android:layout_gravity="center_vertical"
+        android:padding="?dialogPreferredPadding" />
 
     <TextView
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="@string/dialog_loading"
-        android:gravity="center_vertical"
+        android:textSize="24sp"
+        android:textColor="@color/colorAccent"
+        android:layout_gravity="center_vertical"
         android:paddingLeft="?dialogPreferredPadding"
         android:paddingRight="?dialogPreferredPadding" />
 
