--- a/August0802/src/main/res/layout/activity_about.xml
+++ b/August0802/src/main/res/layout/activity_about.xml
@@ -36,7 +36,7 @@
         android:text="
         **  作者：一个漂亮的GoER \n
         **  微博：一个漂亮的GoER \n
-        **  邮箱：\n\t\t\t\t\t\t\t\t\twondertwo1@163.com\n\n
+        **  邮箱：\n\t\t\t\t\t\t\t\t\t\twondertwo1@163.com\n\n
         ------------------------\n\n
         **  欢迎邮箱反馈交流 \n
         **  保留本软件相关权限 \n
