--- a/August0802/src/main/res/layout/fragment_list.xml
+++ b/August0802/src/main/res/layout/fragment_list.xml
@@ -1,27 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment_list_refresh"
+    android:id="@+id/fragment_list_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ui.activity.MainActivity">
     <!--android:orientation="vertical"-->
 
-
-    <!--the top View pager-->
-    <!--<android.support.v4.view.ViewPager
-        android:id="@+id/fragment_dudu_vp"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/fragment_list_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />-->
+        android:layout_height="match_parent">
+        <!--the top View pager-->
+        <!--<android.support.v4.view.ViewPager
+            android:id="@+id/fragment_dudu_vp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />-->
 
-    <!--the dailyArticle recycler view-->
-    <com.jude.easyrecyclerview.EasyRecyclerView
-        android:id="@+id/fragment_list_recycler"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </com.jude.easyrecyclerview.EasyRecyclerView>
+        <!--the dailyArticle recycler view-->
+        <com.jude.easyrecyclerview.EasyRecyclerView
+            android:id="@+id/fragment_list_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </com.jude.easyrecyclerview.EasyRecyclerView>
 
-</android.support.v4.widget.SwipeRefreshLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+    <!--floating bar-->
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floating_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@android:drawable/ic_dialog_email"
+        android:visibility="visible" />
+
+</android.support.design.widget.CoordinatorLayout>
