--- a/August0802/src/main/res/layout/fragment_list.xml
+++ b/August0802/src/main/res/layout/fragment_list.xml
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email"
+        android:src="@drawable/floating_calendar"
         android:visibility="visible" />
 
 </android.support.design.widget.CoordinatorLayout>
